--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   camera: ^0.10.5
   google_mlkit_barcode_scanning: ^0.11.0
   path_provider: ^2.1.1
+  intl: ^0.20.2
   permission_handler: ^11.0.1
+  video_player: ^2.10.1
+  chewie: ^1.13.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
